assets/css/main.css
/* ... */
@media (max-width: 600px) {
  .process-box .content-wrapper.align-left {
    left: 0;
  }

  .process-box .content-wrapper {
    width: 90%;
    left: 10%;
    padding-bottom: 10px;
  }

  .process-box.three .content-wrapper {
    left: 15%;
    width: 85%;
  }

  .process-box .content {
    width: 50%;
  }

  .process-box.three .content {
    width: 55%;
  }
}

@media (min-width: 421px) and (max-width: 520px) {
  .process-box .content-wrapper {
    top: 30%;
    transform: translateY(-30%);
  }
}

@media (max-width: 420px) {
  .navbar-brand {
    padding: 15px;
  }

  .navbar-brand > img {
    width: 175px;
  }

  /* .carousel-section .carousel-caption {
    top: 30%;
    transform: translateY(-30%);
  } */

  .carousel-section .carousel-title {
    font-size: 14px;
    margin-bottom: 5px;
  }

  .process-box {
    height: 225px;
  }

  .process-box .content-wrapper {
    width: 75%;
    left: 25%;
  }

  .process-box .content {
    width: 60%;
  }

  .process-box.three .content-wrapper {
    background-image: none;
  }
}

/* Video backgroud styles */
.video-section {
  position: relative;
  min-width: 100vw;
  padding: 0;
  overflow: hidden;
  max-height: 700px;
  background-image:  url("../images/about/Craftmanship.JPG");
  display: block;
  background-size: cover;
}

.video-overlay {
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(20, 20, 20, 0.25);
}

#background-video {
  outline: 0;
}

.video-caption {
  position: absolute;
  top: 40%;
  left: 50%;
  padding: 0 30px;
  width: 100%;
  transform: translate(-50%, -40%);
}

.video-caption .text {
  font-family: "PT Serif", serif;
  font-size: 4rem;
  color: #fff;
  text-align: center;
  margin: 0;
  text-shadow: 0 1px 2px rgba(10, 10, 10, 0.25);
}

.craftmentship-card-title{
  font-family: "PT Serif", serif;
  font-size: 1.5rem;
  color: #fff;
  text-align: center;
  margin-top: 10px;
  /* text-shadow: 0 1px 2px rgba(10, 10, 10, 0.25); */
}

.craftmentship-card-image{
  margin-left: auto;
  margin-right: auto;
}

.craftmentship-container{
  width: 845px;
  /* margin: auto; */
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

@media (min-aspect-ratio: 16/9) {
  #background-video {
    width: 100%;
    height: auto;
  }

  .customHeight {

  }
}

@media (max-aspect-ratio: 16/9) {
  #background-video {
    width: auto;
    height: 100%;
  }
}

@media (max-width: 767px) {
  /*#background-video {*/
  /*  position: absolute;*/
  /*  top: 0;*/
  /*  left: 0;*/
  /*}*/

  /*.video-caption {*/
  /*  top: 35%;*/
  /*  margin: auto;*/
  /*  transform: translate(-50%, -35%);*/
  /*}*/

  /*.video-caption .text {*/
  /*  font-size: 32px;*/
  /*}*/
}

@media (max-width: 420px) {
  .video-caption .text {
    font-size: 24px;
  }
}

@keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
  }
  100% {
    opacity: 1;
    -webkit-transform: none;
    transform: none;
  }
}

/* Contact us styles */
.contact-top-section .section-title {
  color: #73532f;
  font-size: 26px;
  font-weight: 400;
  margin-bottom: 30px;
  padding: 0;
}

.contact-bottom-section .section-content,
.contact-top-section .section-content {
  font-size: 18px;
  line-height: 1.75;
  color: #73532f;
}

.contact-bottom-section .img-responsive{
  margin: 30px auto;
}

.contact-info > a {
  display: inline-block;
  color: #73532f;
  transition: all 0.25s ease-in-out;
}

.contact-info > a:hover,
.contact-info > a:focus {
  box-shadow: inset 0px -1px 0 #73532f;
}

.contact-form-section {
  padding-top: 0;
  padding-bottom: 0;
}

.contact-form-section .form-control {
  font-family: "PT Serif", serif;
  font-size: 16px;
  border-color: #73532f;
  color: #73532f;
  height: 48px;
  padding: 6px 18px;
}

.contact-form-section .form-control::placeholder {
  color: #aa8265;
  opacity: 1;
}

.contact-form-section .form-control:-ms-input-placeholder {
  color: #aa8265;
}

.contact-form-section .form-control::-ms-input-placeholder {
  color: #aa8265;
}

.contact-form-section textarea.form-control {
  height: auto;
}

.contact-form-section .btn-default {
  font-family: "PT Serif", serif;
  font-size: 16px;
  height: 48px;
  padding: 0px 45px;
  outline: 0;
  background-color: #73532f;
  border-color: #73532f;
  color: #fff;
  box-shadow: none;
  transition: all 0.25s ease-in-out;
}

.contact-form-section .btn-default:hover,
.contact-form-section .btn-default:focus,
.contact-form-section .btn-default:active {
  background-color: #fff;
  color: #73532f;
}

.contact-page-image {
  padding-bottom: 25px;
}

/* Products page styles */
.products-sections{
  background-color: #FFF;
}

.list-category{
  margin-bottom: 30px;
}

.list-category li{
  position: relative;
  font-family: 'PT Serif', serif;
  font-size: 16px;
  color: #b68e65;
  margin: 0;
  padding: 0 15px;
  text-align: center;
  text-transform: uppercase;
}

.list-category li:not(:last-child):after{
  position: absolute;
  content: '';
  top: 25%;
  right: 1px;
  height: 60%;
  width: 1px;
  opacity: 0.5;
  background-color: #b48c65;
}

.custom-radio{
  position: absolute;
  z-index: -1000;
  left: -1000px;
  overflow: hidden;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.custom-radio + .label{
  font-family: 'PT Serif', serif;
  font-size: 14px;
  font-weight: normal;
  color: #b48c65;
  display: inline-block;
  cursor: pointer;
  margin: 0;
  padding: 0;
  user-select: none;
  transition: all .25s ease-in-out;
}

.custom-radio:checked + .label{
  font-weight: 600;
}

.product-wrapper {
  position: relative;
  overflow: hidden;
  margin-bottom: 30px;
}

.product-wrapper .product-info-overlay {
  background: rgba(255, 255, 255, 0.5);
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: all 0.25s ease-in;
}
/* ... */

